Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I42fdaf7064635675a25608949766ef25348f6f6e

--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -85,18 +85,12 @@
     <string name="bluetooth_empty_list_user_restricted" msgid="909734990821975673">"Δεν έχετε άδεια να αλλάξετε τις ρυθμίσεις Bluetooth."</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"Σύζευξη νέας συσκευής"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"bluetooth"</string>
-    <!-- no translation found for bluetooth_pair_other_ear_dialog_title (3814943511999984012) -->
-    <skip />
-    <!-- no translation found for bluetooth_pair_other_ear_dialog_left_ear_message (7936892941892347102) -->
-    <skip />
-    <!-- no translation found for bluetooth_pair_other_ear_dialog_right_ear_message (8242208936062915941) -->
-    <skip />
-    <!-- no translation found for bluetooth_pair_other_ear_dialog_right_ear_positive_button (533612082529204078) -->
-    <skip />
-    <!-- no translation found for bluetooth_pair_other_ear_dialog_left_ear_positive_button (6500192653171220257) -->
-    <skip />
-    <!-- no translation found for bluetooth_screen_related (7976543255501825536) -->
-    <skip />
+    <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"Σύζευξη του άλλου αυτιού"</string>
+    <string name="bluetooth_pair_other_ear_dialog_left_ear_message" msgid="7936892941892347102">"Το αριστερό βοήθημα ακοής συνδέθηκε.\n\nΓια τη σύζευξη του δεξιού βοηθήματος ακοής, βεβαιωθείτε ότι είναι ενεργοποιημένο και έτοιμο για σύζευξη."</string>
+    <string name="bluetooth_pair_other_ear_dialog_right_ear_message" msgid="8242208936062915941">"Το δεξί βοήθημα ακοής συνδέθηκε.\n\nΓια τη σύζευξη του αριστερού βοηθήματος ακοής, βεβαιωθείτε ότι είναι ενεργοποιημένο και έτοιμο για σύζευξη."</string>
+    <string name="bluetooth_pair_other_ear_dialog_right_ear_positive_button" msgid="533612082529204078">"Σύζευξη δεξιού"</string>
+    <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"Σύζευξη αριστερού"</string>
+    <string name="bluetooth_screen_related" msgid="7976543255501825536">"Σχετικά"</string>
     <string name="bluetooth_is_visible_message" msgid="3811631869768157387">"Η συσκευή <xliff:g id="DEVICE_NAME">%1$s</xliff:g> είναι ορατή σε κοντινές συσκευές όταν είναι ανοικτές οι Ρυθμίσεις Bluetooth."</string>
     <string name="bluetooth_footer_mac_message" product="default" msgid="4782330594323261630">"Διεύθυνση Bluetooth τηλεφώνου: <xliff:g id="BLUETOOTH_MAC_ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_footer_mac_message" product="tablet" msgid="1257226691967432025">"Διεύθυνση Bluetooh tablet <xliff:g id="BLUETOOTH_MAC_ADDRESS">%1$s</xliff:g>"</string>
@@ -734,10 +728,6 @@
     <string name="lock_last_pattern_attempt_before_wipe_profile" msgid="2479195488386373253">"Εάν εισαγάγετε εσφαλμένο μοτίβο στην επόμενη προσπάθεια, το προφίλ εργασίας σας και τα δεδομένα του θα διαγραφούν"</string>
     <string name="lock_last_pin_attempt_before_wipe_profile" msgid="7086428013814722436">"Εάν εισαγάγετε εσφαλμένο PIN στην επόμενη προσπάθεια, το προφίλ εργασίας σας και τα δεδομένα του θα διαγραφούν"</string>
     <string name="lock_last_password_attempt_before_wipe_profile" msgid="253673907244112643">"Εάν εισαγάγετε εσφαλμένο κωδικό πρόσβασης στην επόμενη προσπάθεια, το προφίλ εργασίας σας και τα δεδομένα του θα διαγραφούν"</string>
-    <string name="lock_failed_attempts_now_wiping_device" msgid="2813744895409014471">"Πάρα πολλές ανεπιτυχείς προσπάθειες. Τα δεδομένα αυτής της συσκευής θα διαγραφούν."</string>
-    <string name="lock_failed_attempts_now_wiping_user" msgid="3958755474620948727">"Πάρα πολλές ανεπιτυχείς προσπάθειες. Αυτός ο χρήστης θα διαγραφεί."</string>
-    <string name="lock_failed_attempts_now_wiping_profile" msgid="3171880997211568208">"Πάρα πολλές ανεπιτυχείς προσπάθειες. Αυτό το προφίλ εργασίας και τα δεδομένα του θα διαγραφούν."</string>
-    <string name="lock_failed_attempts_now_wiping_dialog_dismiss" msgid="170155081899679669">"Παράβλεψη"</string>
     <plurals name="lockpassword_password_too_short" formatted="false" msgid="2192234965414232157">
       <item quantity="other">Πρέπει να περιέχει τουλάχιστον <xliff:g id="COUNT_1">%d</xliff:g> χαρακτήρες</item>
       <item quantity="one">Πρέπει να περιέχει τουλάχιστον <xliff:g id="COUNT_0">%d</xliff:g> χαρακτήρα</item>
@@ -2332,24 +2322,15 @@
     <string name="accessibility_introduction_title" msgid="8834950581512452348">"Σχετικά με <xliff:g id="SERVICE">%1$s</xliff:g>"</string>
     <string name="accessibility_text_reading_options_title" msgid="3224648909213325563">"Μέγεθος οθόνης και κείμενο"</string>
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"Αλλαγή του τρόπου προβολής κειμένου"</string>
-    <!-- no translation found for accessibility_text_reading_preview_mail_subject (4597374768612733616) -->
-    <skip />
-    <!-- no translation found for accessibility_text_reading_preview_mail_from (1797499780365288020) -->
-    <skip />
-    <!-- no translation found for accessibility_text_reading_preview_mail_content (8078152365771951802) -->
-    <skip />
-    <!-- no translation found for accessibility_text_reading_reset_button_title (5960753279788187669) -->
-    <skip />
-    <!-- no translation found for accessibility_text_reading_confirm_dialog_title (2865331351355690389) -->
-    <skip />
-    <!-- no translation found for accessibility_text_reading_confirm_dialog_message (517090197003540264) -->
-    <skip />
-    <!-- no translation found for accessibility_text_reading_confirm_dialog_reset_button (8215800137850243736) -->
-    <skip />
-    <!-- no translation found for accessibility_text_reading_conversation_message_1 (7883952203831957831) -->
-    <skip />
-    <!-- no translation found for accessibility_text_reading_conversation_message_2 (8112160435318635856) -->
-    <skip />
+    <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"Θέμα: Σχέδια αερόστατων"</string>
+    <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"Από: Βασίλης"</string>
+    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"Καλημέρα!\n\nΑπλά ήθελα να δω τι γίνεται με τα σχέδια. Θα είναι έτοιμα πριν ξεκινήσουμε τη δημιουργία των νέων μπαλονιών;"</string>
+    <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"Επαναφορά ρυθμίσεων"</string>
+    <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"Επαναφορά μεγέθους οθόνης και κειμένου;"</string>
+    <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"Θα γίνει επαναφορά των προτιμήσεων μεγέθους οθόνης και κειμένου στις αρχικές ρυθμίσεις του τηλεφώνου σας"</string>
+    <string name="accessibility_text_reading_confirm_dialog_reset_button" msgid="8215800137850243736">"Επαναφορά"</string>
+    <string name="accessibility_text_reading_conversation_message_1" msgid="7883952203831957831">"Έχετε προγραμματίσει κάτι για το Σαββατοκύριακο;"</string>
+    <string name="accessibility_text_reading_conversation_message_2" msgid="8112160435318635856">"Πάω στην παραλία. Θες να έρθεις;"</string>
     <string name="accessibility_screen_option" msgid="8465307075278878145">"Επιλογές"</string>
     <string name="accessibility_preference_magnification_summary" msgid="2875518904115896888">"Μεγέθυνση στην οθόνη"</string>
     <string name="accessibility_screen_magnification_short_summary" msgid="2207048420669939150">"Πατήστε 3 φορές για εστίαση"</string>
@@ -2511,19 +2492,13 @@
     <string name="accessibility_hearingaid_title" msgid="427173678199203191">"Ακουστικά βοηθήματα"</string>
     <string name="accessibility_hearingaid_not_connected_summary" msgid="3371427366765435743">"Δεν έχουν συνδεθεί ακουστικά βοηθήματα"</string>
     <string name="accessibility_hearingaid_adding_summary" msgid="999051610528600783">"Προσθήκη βοηθημάτων ακοής"</string>
-    <!-- no translation found for accessibility_hearingaid_pair_instructions_title (2357706801112207624) -->
-    <skip />
-    <!-- no translation found for accessibility_hearingaid_pair_instructions_message (581652489109350119) -->
-    <skip />
+    <string name="accessibility_hearingaid_pair_instructions_title" msgid="2357706801112207624">"Σύζευξη βοηθημάτων ακοής"</string>
+    <string name="accessibility_hearingaid_pair_instructions_message" msgid="581652489109350119">"Στην επόμενη οθόνη, πατήστε τα βοηθήματα ακοής σας. Μπορεί να χρειαστεί να κάνετε τη σύζευξη ξεχωριστά για κάθε αυτί.\n\nΒεβαιωθείτε ότι τα βοηθήματα ακοής σας είναι ενεργοποιημένα και έτοιμα για σύζευξη."</string>
     <string name="accessibility_hearingaid_active_device_summary" msgid="509703438222873967">"Η συσκευή <xliff:g id="DEVICE_NAME">%1$s</xliff:g> είναι ενεργοποιημένη"</string>
-    <!-- no translation found for accessibility_hearingaid_left_side_device_summary (1907302799168261001) -->
-    <skip />
-    <!-- no translation found for accessibility_hearingaid_right_side_device_summary (148257064855054376) -->
-    <skip />
-    <!-- no translation found for accessibility_hearingaid_left_and_right_side_device_summary (4268221140368164452) -->
-    <skip />
-    <!-- no translation found for accessibility_hearingaid_more_device_summary (8092641784056942546) -->
-    <skip />
+    <string name="accessibility_hearingaid_left_side_device_summary" msgid="1907302799168261001">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g>, μόνο το αριστερό"</string>
+    <string name="accessibility_hearingaid_right_side_device_summary" msgid="148257064855054376">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g>, μόνο το δεξί"</string>
+    <string name="accessibility_hearingaid_left_and_right_side_device_summary" msgid="4268221140368164452">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g>, αριστερό και δεξί"</string>
+    <string name="accessibility_hearingaid_more_device_summary" msgid="8092641784056942546">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> +1 ακόμη"</string>
     <plurals name="show_number_hearingaid_count" formatted="false" msgid="776000580683647556">
       <item quantity="other"><xliff:g id="NUMBER_DEVICE_COUNT_1">%1$d</xliff:g> αποθηκευμένα ακουστικά βοηθήματα</item>
       <item quantity="one"><xliff:g id="NUMBER_DEVICE_COUNT_0">%1$d</xliff:g> αποθηκευμένο ακουστικό βοήθημα</item>
@@ -3391,14 +3366,14 @@
     <string name="user_settings_footer_text" product="default" msgid="4420915712050349125">"Μοιραστείτε το τηλέφωνό σας προσθέτοντας νέους χρήστες. Κάθε χρήστης έχει έναν προσωπικό χώρο στο τηλέφωνό σας για προσαρμοσμένες αρχικές οθόνες, λογαριασμούς, εφαρμογές, ρυθμίσεις και άλλα."</string>
     <string name="user_list_title" msgid="1387379079186123404">"Χρήστες και προφίλ"</string>
     <string name="user_add_user_or_profile_menu" msgid="305851380425838287">"Προσθήκη χρήστη ή προφίλ"</string>
-    <string name="user_add_user_menu" msgid="6395904234221724625">"Προσθήκη χρήστη"</string>
     <string name="user_summary_restricted_profile" msgid="451650609582185813">"Προφίλ περιορισμένης πρόσβασης"</string>
     <string name="user_summary_not_set_up" msgid="4602868481732886115">"Δεν υπάρχει ρύθμιση"</string>
     <string name="user_summary_restricted_not_set_up" msgid="1658946988920104613">"Δεν έχει ρυθμιστεί - Προφίλ περιορισμένης πρόσβασης"</string>
     <string name="user_summary_managed_profile_not_set_up" msgid="5739207307082458746">"Δεν έχει ρυθμιστεί - Προφίλ εργασίας"</string>
     <string name="user_admin" msgid="4024553191395768119">"Διαχειριστής"</string>
     <string name="user_you" msgid="3070562015202859996">"Εσείς (<xliff:g id="NAME">%s</xliff:g>)"</string>
-    <string name="user_add_max_count" msgid="5739771048517070983">"Μπορείτε να προσθέσετε έως και <xliff:g id="USER_COUNT">%1$d</xliff:g> χρήστες"</string>
+    <!-- no translation found for user_add_max_count (3328539978480663740) -->
+    <skip />
     <string name="user_cannot_manage_message" product="tablet" msgid="3405022988077682357">"Μόνο ο κάτοχος του tablet μπορεί να διαχειριστεί χρήστες."</string>
     <string name="user_cannot_manage_message" product="default" msgid="6434662649769855494">"Μόνο ο κάτοχος του τηλεφώνου μπορεί να διαχειριστεί χρήστες."</string>
     <string name="user_cannot_add_accounts_message" msgid="2351326078338805337">"Δεν είναι δυνατή η προσθήκη λογαριασμών από περιορισμένα προφίλ"</string>
@@ -3418,9 +3393,6 @@
     <string name="user_adding_new_user" msgid="7439602720177181412">"Προσθήκη νέου χρήστη…"</string>
     <string name="user_delete_user_description" msgid="7764153465503821011">"Διαγραφή χρήστη"</string>
     <string name="user_delete_button" msgid="3833498650182594653">"Διαγραφή"</string>
-    <string name="user_guest" msgid="4545590092001460388">"Επισκέπτης"</string>
-    <string name="user_exit_guest_title" msgid="2653103120908427236">"Κατάργηση επισκέπτη"</string>
-    <string name="user_exit_guest_confirm_title" msgid="1284823459630164754">"Κατάργηση επισκέπτη;"</string>
     <string name="user_exit_guest_confirm_message" msgid="8995296853928816554">"Όλες οι εφαρμογές και τα δεδομένα αυτής της περιόδου σύνδεσης θα διαγραφούν."</string>
     <string name="user_exit_guest_dialog_remove" msgid="7067727314172605181">"Κατάργηση"</string>
     <string name="user_enable_calling" msgid="264875360626905535">"Ενεργοποίηση τηλεφωνικών κλήσεων"</string>
@@ -4427,7 +4399,12 @@
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> εφαρμογές που δεν χρησιμοποιούνται</item>
       <item quantity="one"><xliff:g id="COUNT_0">%d</xliff:g> εφαρμογή που δεν χρησιμοποιείται</item>
     </plurals>
-    <string name="unused_apps_switch" msgid="419282628373205038">"Κατάργηση αδειών και απελευθέρωση χώρου"</string>
+    <!-- no translation found for unused_apps_category (8954930958175500851) -->
+    <skip />
+    <!-- no translation found for unused_apps_switch (2979882622987847195) -->
+    <skip />
+    <!-- no translation found for unused_apps_switch_summary (6971069728614582344) -->
+    <skip />
     <string name="filter_all_apps" msgid="6645539744080251371">"Όλες οι εφαρμογές"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"Εγκατεστημένες εφαρμογές"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"Instant Εφαρμογές"</string>
@@ -5583,6 +5560,10 @@
     <string name="accessor_never_expires_text" msgid="4647624492147788340">"Η ενοικίαση δεν λήγει ποτέ."</string>
     <string name="overlay_settings_title" msgid="1032863083496396365">"Να επιτρέπονται οι επικαλ. οθόνης στις Ρυθμίσεις"</string>
     <string name="overlay_settings_summary" msgid="2745336273786148166">"Να επιτρέπονται εφαρμογές που μπορούν να εμφανίζονται πάνω από άλλες εφαρμογές για επικάλυψη των οθονών ρυθμίσεων"</string>
+    <!-- no translation found for allow_mock_modem (3832264806530479214) -->
+    <skip />
+    <!-- no translation found for allow_mock_modem_summary (9097416612748005374) -->
+    <skip />
     <string name="media_controls_title" msgid="403271085636252597">"Μέσα"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Καρφίτσωμα προγράμματος αναπαραγωγής μέσων"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Για γρήγορη συνέχιση της αναπαραγωγής, το πρόγραμμα αναπαραγωγής μέσων παραμένει ανοικτό στις Γρήγορες ρυθμίσεις"</string>
@@ -5668,7 +5649,8 @@
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"Χρήση καρφιτσώματος εφαρμογής"</string>
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Χρήση επιλογών για προγραμματιστές"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"Χρήση υπηρεσίας εκτύπωσης"</string>
-    <string name="multiple_users_main_switch_title" msgid="564013811417665756">"Ενεργοποίηση πολλαπλών χρηστών"</string>
+    <!-- no translation found for multiple_users_main_switch_title (6686858308083037810) -->
+    <skip />
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Χρήση ασύρματου εντοπισμού σφαλμάτων"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"Χρήση προτιμήσεων προγράμματος οδήγησης γραφικών"</string>
     <string name="battery_saver_main_switch_title" msgid="5072135547489779352">"Χρησιμοποιήστε την Εξοικονόμηση μπαταρίας"</string>
@@ -5770,16 +5752,20 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Προεπισκόπηση"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Επιλογή προφύλαξης οθόνης"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Εμφάνιση πρόσθετων πληροφοριών"</string>
-    <string name="dream_complications_toggle_summary" msgid="8288590233196337078">"Εμφάνιση ώρας, ημερομηνίας και καιρού στην προφύλαξη οθόνης"</string>
+    <!-- no translation found for dream_complications_toggle_summary (4742579722349951711) -->
+    <skip />
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Περισσότερες ρυθμίσεις"</string>
-    <string name="dream_setup_title" msgid="6356243920317789584">"Προσαρμόστε την προφύλαξη οθόνης"</string>
-    <string name="dream_setup_description" msgid="8881397422185278075">"Επιλέξτε τι θα εμφανίζεται στην οθόνη όταν δεν χρησιμοποιείται η συσκευή."</string>
+    <!-- no translation found for dream_setup_title (2458303874255396142) -->
+    <skip />
+    <!-- no translation found for dream_setup_description (7508547154038580296) -->
+    <skip />
     <string name="customize_button_title" msgid="1110284655990203359">"Προσαρμογή"</string>
     <string name="reboot_dialog_enable_freeform_support" msgid="6412591361284929149">"Απαιτείται επανεκκίνηση για την ενεργοποίηση της υποστήριξης ελεύθερης μορφής."</string>
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"Απαιτείται επανεκκίνηση για την επιβολή χρήσης της λειτουργίας υπολογιστή σε δευτερεύουσες οθόνες."</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"Επανεκκίνηση τώρα"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Επανεκκίνηση αργότερα"</string>
-    <string name="bluetooth_details_spatial_audio_title" msgid="6183752635162309599">"Χωρικός ήχος"</string>
+    <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
+    <skip />
     <!-- no translation found for bluetooth_details_spatial_audio_summary (5026859623681482668) -->
     <skip />
     <!-- no translation found for bluetooth_details_head_tracking_title (5416972521040337799) -->
