--- a/res/values-az/strings.xml
+++ b/res/values-az/strings.xml
@@ -85,18 +85,12 @@
     <string name="bluetooth_empty_list_user_restricted" msgid="909734990821975673">"Bluetooth ayarlarını dəyişməyə icazəniz yoxdur."</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"Cihaz əlavə edin"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"bluetooth"</string>
-    <!-- no translation found for bluetooth_pair_other_ear_dialog_title (3814943511999984012) -->
-    <skip />
-    <!-- no translation found for bluetooth_pair_other_ear_dialog_left_ear_message (7936892941892347102) -->
-    <skip />
-    <!-- no translation found for bluetooth_pair_other_ear_dialog_right_ear_message (8242208936062915941) -->
-    <skip />
-    <!-- no translation found for bluetooth_pair_other_ear_dialog_right_ear_positive_button (533612082529204078) -->
-    <skip />
-    <!-- no translation found for bluetooth_pair_other_ear_dialog_left_ear_positive_button (6500192653171220257) -->
-    <skip />
-    <!-- no translation found for bluetooth_screen_related (7976543255501825536) -->
-    <skip />
+    <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"Digər qulaqlığı birləşdirin"</string>
+    <string name="bluetooth_pair_other_ear_dialog_left_ear_message" msgid="7936892941892347102">"Sol eşitmə cihazınız qoşulub.\n\nSağı qoşmaq üçün onun aktiv və birləşdirməyə hazır olduğuna əmin olun."</string>
+    <string name="bluetooth_pair_other_ear_dialog_right_ear_message" msgid="8242208936062915941">"Sağ eşitmə cihazınız qoşulub.\n\nSolu qoşmaq üçün onun aktiv və birləşdirməyə hazır olduğuna əmin olun."</string>
+    <string name="bluetooth_pair_other_ear_dialog_right_ear_positive_button" msgid="533612082529204078">"Sağ qulaqlığı birləşdirin"</string>
+    <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"Sol qulaqlığı birləşdirin"</string>
+    <string name="bluetooth_screen_related" msgid="7976543255501825536">"Oxşar"</string>
     <string name="bluetooth_is_visible_message" msgid="3811631869768157387">"Bluetooth ayarları açıq olarkən <xliff:g id="DEVICE_NAME">%1$s</xliff:g> yaxınlıqdakı cihazlara görünən olur."</string>
     <string name="bluetooth_footer_mac_message" product="default" msgid="4782330594323261630">"Telefonun Bluetooth ünvanı: <xliff:g id="BLUETOOTH_MAC_ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_footer_mac_message" product="tablet" msgid="1257226691967432025">"Planşetin Bluetooh ünvanı: <xliff:g id="BLUETOOTH_MAC_ADDRESS">%1$s</xliff:g>"</string>
@@ -734,10 +728,6 @@
     <string name="lock_last_pattern_attempt_before_wipe_profile" msgid="2479195488386373253">"Növbəti cəhddə yanlış nümunə daxil etsəniz, iş profili və datanız silinəcək"</string>
     <string name="lock_last_pin_attempt_before_wipe_profile" msgid="7086428013814722436">"Növbəti cəhddə yanlış PIN yazsanız, iş profili və datanız silinəcək"</string>
     <string name="lock_last_password_attempt_before_wipe_profile" msgid="253673907244112643">"Növbəti cəhddə yanlış parol daxil etsəniz, iş profili və datası silinəcək"</string>
-    <string name="lock_failed_attempts_now_wiping_device" msgid="2813744895409014471">"Həddindən artıq yanlış cəhd. Bu cihazın datası silinəcək."</string>
-    <string name="lock_failed_attempts_now_wiping_user" msgid="3958755474620948727">"Həddindən artıq yanlış cəhd. Bu istifadəçi silinəcək."</string>
-    <string name="lock_failed_attempts_now_wiping_profile" msgid="3171880997211568208">"Həddindən artıq yanlış cəhd. Bu iş profili və datanız silinəcək."</string>
-    <string name="lock_failed_attempts_now_wiping_dialog_dismiss" msgid="170155081899679669">"Bağla"</string>
     <plurals name="lockpassword_password_too_short" formatted="false" msgid="2192234965414232157">
       <item quantity="other">Minimum <xliff:g id="COUNT_1">%d</xliff:g> simvol olmalıdır</item>
       <item quantity="one">Minimum <xliff:g id="COUNT_0">%d</xliff:g> simvol olmalıdır</item>
@@ -2332,24 +2322,15 @@
     <string name="accessibility_introduction_title" msgid="8834950581512452348">"<xliff:g id="SERVICE">%1$s</xliff:g> haqqında"</string>
     <string name="accessibility_text_reading_options_title" msgid="3224648909213325563">"Displey ölçüsü və mətni"</string>
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"Mətnin necə göstərilməsini dəyişdirin"</string>
-    <!-- no translation found for accessibility_text_reading_preview_mail_subject (4597374768612733616) -->
-    <skip />
-    <!-- no translation found for accessibility_text_reading_preview_mail_from (1797499780365288020) -->
-    <skip />
-    <!-- no translation found for accessibility_text_reading_preview_mail_content (8078152365771951802) -->
-    <skip />
-    <!-- no translation found for accessibility_text_reading_reset_button_title (5960753279788187669) -->
-    <skip />
-    <!-- no translation found for accessibility_text_reading_confirm_dialog_title (2865331351355690389) -->
-    <skip />
-    <!-- no translation found for accessibility_text_reading_confirm_dialog_message (517090197003540264) -->
-    <skip />
-    <!-- no translation found for accessibility_text_reading_confirm_dialog_reset_button (8215800137850243736) -->
-    <skip />
-    <!-- no translation found for accessibility_text_reading_conversation_message_1 (7883952203831957831) -->
-    <skip />
-    <!-- no translation found for accessibility_text_reading_conversation_message_2 (8112160435318635856) -->
-    <skip />
+    <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"Mövzu: Hava balonu dizaynları"</string>
+    <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"Kimdən: Bill"</string>
+    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"Sabahınız xeyir!\n\nMən sadəcə dizaynların necə olduğunu yoxlamaq istəyirdim. Biz yeni balonları yaratmağa başlamazdan əvvəl onlar hazır olacaqmı?"</string>
+    <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"Ayarları sıfırlayın"</string>
+    <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"Displey ölçüsü və mətn sıfırlansın?"</string>
+    <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"Displey ölçüsü və mətn tərcihləriniz telefonun orijinal ayarlarına sıfırlanacaq"</string>
+    <string name="accessibility_text_reading_confirm_dialog_reset_button" msgid="8215800137850243736">"Sıfırlayın"</string>
+    <string name="accessibility_text_reading_conversation_message_1" msgid="7883952203831957831">"Həftə sonu planlarınız var?"</string>
+    <string name="accessibility_text_reading_conversation_message_2" msgid="8112160435318635856">"Çimərliyə gedirəm. Mənə qoşulmaq istəyirsən?"</string>
     <string name="accessibility_screen_option" msgid="8465307075278878145">"Seçimlər"</string>
     <string name="accessibility_preference_magnification_summary" msgid="2875518904115896888">"Ekranda yaxınlaşdırın"</string>
     <string name="accessibility_screen_magnification_short_summary" msgid="2207048420669939150">"Miqyası dəyişmək üçün 3 dəfə tıklayın"</string>
@@ -2511,19 +2492,13 @@
     <string name="accessibility_hearingaid_title" msgid="427173678199203191">"Eşitmə cihazları"</string>
     <string name="accessibility_hearingaid_not_connected_summary" msgid="3371427366765435743">"Eşitmə cihazı qoşulmayıb"</string>
     <string name="accessibility_hearingaid_adding_summary" msgid="999051610528600783">"Eşitmə aparatları əlavə edin"</string>
-    <!-- no translation found for accessibility_hearingaid_pair_instructions_title (2357706801112207624) -->
-    <skip />
-    <!-- no translation found for accessibility_hearingaid_pair_instructions_message (581652489109350119) -->
-    <skip />
+    <string name="accessibility_hearingaid_pair_instructions_title" msgid="2357706801112207624">"Eşitmə cihazlarını birləşdirin"</string>
+    <string name="accessibility_hearingaid_pair_instructions_message" msgid="581652489109350119">"Növbəti ekranda eşitmə cihazlarınıza toxunun. Sol və sağ qulaqları ayrı-ayrılıqda birləşdirməli ola bilərsiniz.\n\nEşitmə cihazlarınızın aktiv və birləşdirməyə hazır olduğuna əmin olun."</string>
     <string name="accessibility_hearingaid_active_device_summary" msgid="509703438222873967">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> aktivdir"</string>
-    <!-- no translation found for accessibility_hearingaid_left_side_device_summary (1907302799168261001) -->
-    <skip />
-    <!-- no translation found for accessibility_hearingaid_right_side_device_summary (148257064855054376) -->
-    <skip />
-    <!-- no translation found for accessibility_hearingaid_left_and_right_side_device_summary (4268221140368164452) -->
-    <skip />
-    <!-- no translation found for accessibility_hearingaid_more_device_summary (8092641784056942546) -->
-    <skip />
+    <string name="accessibility_hearingaid_left_side_device_summary" msgid="1907302799168261001">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g>, yalnız sol"</string>
+    <string name="accessibility_hearingaid_right_side_device_summary" msgid="148257064855054376">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g>, yalnız sağ"</string>
+    <string name="accessibility_hearingaid_left_and_right_side_device_summary" msgid="4268221140368164452">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g>, sol və sağ"</string>
+    <string name="accessibility_hearingaid_more_device_summary" msgid="8092641784056942546">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> və daha 1 cihaz"</string>
     <plurals name="show_number_hearingaid_count" formatted="false" msgid="776000580683647556">
       <item quantity="other"><xliff:g id="NUMBER_DEVICE_COUNT_1">%1$d</xliff:g> yadda saxlanmış qulaqlıq</item>
       <item quantity="one"><xliff:g id="NUMBER_DEVICE_COUNT_0">%1$d</xliff:g> yadda saxlanmış qulaqlıq</item>
@@ -3391,14 +3366,14 @@
     <string name="user_settings_footer_text" product="default" msgid="4420915712050349125">"Cihaza giriş vermək istədiyiniz şəxslər üçün profil yaradın. Hər istifadəçinin fərdi əsas ekranı, hesabları, tətbiqləri, ayarları və sair üçün cihazda şəxsi profili olur."</string>
     <string name="user_list_title" msgid="1387379079186123404">"İstifadəçilər və profillər"</string>
     <string name="user_add_user_or_profile_menu" msgid="305851380425838287">"İstifadəçi və ya profil əlavə edin"</string>
-    <string name="user_add_user_menu" msgid="6395904234221724625">"İstifadəçi əlavə edin"</string>
     <string name="user_summary_restricted_profile" msgid="451650609582185813">"Məhdudlaşdırılmış profil"</string>
     <string name="user_summary_not_set_up" msgid="4602868481732886115">"Quraşdırılmayıb"</string>
     <string name="user_summary_restricted_not_set_up" msgid="1658946988920104613">"Qurulmasın - Məhdudlaşdırılmış profil"</string>
     <string name="user_summary_managed_profile_not_set_up" msgid="5739207307082458746">"Quraşdırılmayıb - İş profili"</string>
     <string name="user_admin" msgid="4024553191395768119">"Admin"</string>
     <string name="user_you" msgid="3070562015202859996">"Siz (<xliff:g id="NAME">%s</xliff:g>)"</string>
-    <string name="user_add_max_count" msgid="5739771048517070983">"<xliff:g id="USER_COUNT">%1$d</xliff:g> istifadəçiyə qədər əlavə edə bilərsiniz"</string>
+    <!-- no translation found for user_add_max_count (3328539978480663740) -->
+    <skip />
     <string name="user_cannot_manage_message" product="tablet" msgid="3405022988077682357">"Yalnız planşet sahibi istifadəçiləri idarə edə bilər."</string>
     <string name="user_cannot_manage_message" product="default" msgid="6434662649769855494">"Yalnız telefon sahibi istifadəçiləri idarə edə bilər"</string>
     <string name="user_cannot_add_accounts_message" msgid="2351326078338805337">"Məhdudlaşdırılmış profillər hesablar əlavə edə bilməz"</string>
@@ -3418,9 +3393,6 @@
     <string name="user_adding_new_user" msgid="7439602720177181412">"Yeni istifadəçi əlavə olunur..."</string>
     <string name="user_delete_user_description" msgid="7764153465503821011">"Istifadəçini sil"</string>
     <string name="user_delete_button" msgid="3833498650182594653">"Silin"</string>
-    <string name="user_guest" msgid="4545590092001460388">"Qonaq"</string>
-    <string name="user_exit_guest_title" msgid="2653103120908427236">"Qonağı silin"</string>
-    <string name="user_exit_guest_confirm_title" msgid="1284823459630164754">"Qonaq silinsin?"</string>
     <string name="user_exit_guest_confirm_message" msgid="8995296853928816554">"Bu sessiyada bütün tətbiqlər və data itəcək."</string>
     <string name="user_exit_guest_dialog_remove" msgid="7067727314172605181">"Yığışdır"</string>
     <string name="user_enable_calling" msgid="264875360626905535">"Telefon zəngləri aktivləşdirilsin"</string>
@@ -4427,7 +4399,12 @@
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> istifadə olunmayan tətbiq</item>
       <item quantity="one"><xliff:g id="COUNT_0">%d</xliff:g> istifadə olunmayan tətbiq</item>
     </plurals>
-    <string name="unused_apps_switch" msgid="419282628373205038">"İcazələri silin və yer boşaldın"</string>
+    <!-- no translation found for unused_apps_category (8954930958175500851) -->
+    <skip />
+    <!-- no translation found for unused_apps_switch (2979882622987847195) -->
+    <skip />
+    <!-- no translation found for unused_apps_switch_summary (6971069728614582344) -->
+    <skip />
     <string name="filter_all_apps" msgid="6645539744080251371">"Bütün tətbiqlər"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"Quraşdırılmış tətbiqlər"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"Ani tətbiqlər"</string>
@@ -5583,6 +5560,10 @@
     <string name="accessor_never_expires_text" msgid="4647624492147788340">"İcarə müddəti heç vaxt bitməyəcək."</string>
     <string name="overlay_settings_title" msgid="1032863083496396365">"Ayarlarda pəncərəüstü göstərilməyə icazə verilsin"</string>
     <string name="overlay_settings_summary" msgid="2745336273786148166">"Digər tətbiqlərin üzərində görünmək icazəsi olan tətbiqlərə ayarlar üzərində görünmək icazəsi verilsin"</string>
+    <!-- no translation found for allow_mock_modem (3832264806530479214) -->
+    <skip />
+    <!-- no translation found for allow_mock_modem_summary (9097416612748005374) -->
+    <skip />
     <string name="media_controls_title" msgid="403271085636252597">"Media"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Mediapleyer bərkidilsin"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Oxutmanı cəld davam etdirmək üçün media pleyer Sürətli Ayarlarda açıq qalır"</string>
@@ -5668,7 +5649,8 @@
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"Tətbiq bərkidilməsi"</string>
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Developer seçimlərini işlədin"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"Çap xidmətindən istifadə edin"</string>
-    <string name="multiple_users_main_switch_title" msgid="564013811417665756">"Çox sayda istifadəçini aktivləşdirin"</string>
+    <!-- no translation found for multiple_users_main_switch_title (6686858308083037810) -->
+    <skip />
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Wi-Fi vasitəsilə sazlayın"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"Qrafik drayver tərcihlərinin istifadəsi"</string>
     <string name="battery_saver_main_switch_title" msgid="5072135547489779352">"Enerjiyə qənaət rejiminə keçin"</string>
@@ -5770,22 +5752,23 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Önizləmə"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Ekran qoruyucusu seçin"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Əlavə məlumat göstərin"</string>
-    <string name="dream_complications_toggle_summary" msgid="8288590233196337078">"Ekran qoruyucuda vaxtı, tarixi və hava proqnozunu göstərin"</string>
+    <!-- no translation found for dream_complications_toggle_summary (4742579722349951711) -->
+    <skip />
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Digər ayarlar"</string>
-    <string name="dream_setup_title" msgid="6356243920317789584">"Ekran qoruyucunuzu fərdiləşdirin"</string>
-    <string name="dream_setup_description" msgid="8881397422185278075">"Cihazınız istifadə edilmədikdə ekranınızda nə görəcəyinizi seçin."</string>
+    <!-- no translation found for dream_setup_title (2458303874255396142) -->
+    <skip />
+    <!-- no translation found for dream_setup_description (7508547154038580296) -->
+    <skip />
     <string name="customize_button_title" msgid="1110284655990203359">"Fərdiləşdirin"</string>
     <string name="reboot_dialog_enable_freeform_support" msgid="6412591361284929149">"Sərbəst forma dəstəyini aktivləşdirmək üçün yenidən başlatma tələb olunur."</string>
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"İkinci dərəcəli displeylərdə masaüstü rejimini məcburi aktiv etmək üçün yenidən başlatma tələb olunur."</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"İndi yenidən başladın"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Sonra yeniden başladın"</string>
-    <string name="bluetooth_details_spatial_audio_title" msgid="6183752635162309599">"3D audio effekti"</string>
-    <!-- no translation found for bluetooth_details_spatial_audio_summary (5026859623681482668) -->
+    <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
     <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_title (5416972521040337799) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_summary (3942238746595985395) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"Uyğun mediadan gələn audio daha immersiv olur"</string>
+    <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Baş izləməsi"</string>
+    <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"Daha təbii səslənmək üçün başınızı hərəkət etdirdikcə səs dəyişir"</string>
     <string name="ingress_rate_limit_title" msgid="2106694002836274350">"Şəbəkə endirmə sürəti limiti"</string>
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"İnternet bağlantısı təmin edən bütün şəbəkələrə tətbiq edilən şəbəkə zolaq genişliyi giriş sürəti limitini konfiqurasiya edin."</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"Şəbəkə endirmə sürəti limitini konfiqurasiya edin"</string>
