--- a/res/values-kk/strings.xml
+++ b/res/values-kk/strings.xml
@@ -734,10 +734,6 @@
     <string name="lock_last_pattern_attempt_before_wipe_profile" msgid="2479195488386373253">"Келесі әрекет кезінде қате өрнек енгізсеңіз, жұмыс профиліңіз бен оның деректері жойылады"</string>
     <string name="lock_last_pin_attempt_before_wipe_profile" msgid="7086428013814722436">"Келесі әрекет кезінде қате PIN кодын енгізсеңіз, жұмыс профиліңіз бен оның деректері жойылады"</string>
     <string name="lock_last_password_attempt_before_wipe_profile" msgid="253673907244112643">"Келесі әрекет кезінде қате құпия сөз енгізсеңіз, жұмыс профиліңіз бен оның деректері жойылады"</string>
-    <string name="lock_failed_attempts_now_wiping_device" msgid="2813744895409014471">"Тым көп қате әрекет жасалды. Бұл құрылғылардың деректері жойылады."</string>
-    <string name="lock_failed_attempts_now_wiping_user" msgid="3958755474620948727">"Тым көп қате әрекет жасалды. Бұл пайдаланушы жойылады."</string>
-    <string name="lock_failed_attempts_now_wiping_profile" msgid="3171880997211568208">"Тым көп қате әрекет жасалды. Бұл жұмыс профилі мен оның деректері жойылады."</string>
-    <string name="lock_failed_attempts_now_wiping_dialog_dismiss" msgid="170155081899679669">"Жабу"</string>
     <plurals name="lockpassword_password_too_short" formatted="false" msgid="2192234965414232157">
       <item quantity="other">Кемінде <xliff:g id="COUNT_1">%d</xliff:g> таңба болуы керек</item>
       <item quantity="one">Кемінде <xliff:g id="COUNT_0">%d</xliff:g> таңба болуы керек</item>
@@ -2321,14 +2317,10 @@
     <string name="accessibility_magnification_switch_shortcut_message" msgid="7718653917415163833">"Экран бөлігін үш рет түртіп ұлғайту мәтін теру кезіндегі және басқа да кідірістерге себеп болады.\n\nАрнайы мүмкіндіктер түймесі экраныңызда басқа қолданбалардың үстінде қалқып тұрады. Ұлғайту үшін оны түртіңіз."</string>
     <string name="accessibility_magnification_switch_shortcut_positive_button" msgid="2446942190957296957">"Арнайы мүмкіндіктер түймесіне ауысу"</string>
     <string name="accessibility_magnification_switch_shortcut_negative_button" msgid="7115794462123071594">"Үш рет түртуді пайдалану"</string>
-    <!-- no translation found for accessibility_magnification_triple_tap_warning_title (8484669851397296597) -->
-    <skip />
-    <!-- no translation found for accessibility_magnification_triple_tap_warning_message (2008671502848936410) -->
-    <skip />
-    <!-- no translation found for accessibility_magnification_triple_tap_warning_positive_button (8712304035901450010) -->
-    <skip />
-    <!-- no translation found for accessibility_magnification_triple_tap_warning_negative_button (2028849736366584733) -->
-    <skip />
+    <string name="accessibility_magnification_triple_tap_warning_title" msgid="8484669851397296597">"Пернетақтаның жұмысы баяулауы мүмкін"</string>
+    <string name="accessibility_magnification_triple_tap_warning_message" msgid="2008671502848936410">"Экран бөлігін ұлғайту үшін үш рет түрту кезінде пернетақтада қиындықтар туындауы мүмкін.\n\nМұны болдырмау үшін жылдам ұлғайту пәрменіне үш рет түртуден басқа опцияны тағайындаңыз.\n"<annotation id="link">"Параметрді өзгерту"</annotation></string>
+    <string name="accessibility_magnification_triple_tap_warning_positive_button" msgid="8712304035901450010">"Бәрібір жалғастыру"</string>
+    <string name="accessibility_magnification_triple_tap_warning_negative_button" msgid="2028849736366584733">"Бас тарту"</string>
     <string name="accessibility_magnification_service_settings_title" msgid="3531350704632316017">"Ұлғайту параметрлері"</string>
     <string name="accessibility_screen_magnification_gestures_title" msgid="3121714118381882167">"Үш рет түртіп үлкейту"</string>
     <string name="accessibility_screen_magnification_navbar_title" msgid="480853328665484528">"Таңбашамен үлкейту"</string>
@@ -2340,20 +2332,13 @@
     <skip />
     <!-- no translation found for accessibility_text_reading_preview_mail_from (1797499780365288020) -->
     <skip />
-    <!-- no translation found for accessibility_text_reading_preview_mail_content (8078152365771951802) -->
-    <skip />
-    <!-- no translation found for accessibility_text_reading_reset_button_title (5960753279788187669) -->
-    <skip />
-    <!-- no translation found for accessibility_text_reading_confirm_dialog_title (2865331351355690389) -->
-    <skip />
-    <!-- no translation found for accessibility_text_reading_confirm_dialog_message (517090197003540264) -->
-    <skip />
-    <!-- no translation found for accessibility_text_reading_confirm_dialog_reset_button (8215800137850243736) -->
-    <skip />
-    <!-- no translation found for accessibility_text_reading_conversation_message_1 (7883952203831957831) -->
-    <skip />
-    <!-- no translation found for accessibility_text_reading_conversation_message_2 (8112160435318635856) -->
-    <skip />
+    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"Қайырлы таң!\n\nДизайн не болып жатыр? Ол жаңа қалқымалы терезелер әзірлеуді бастағанға дейін дайын бола ма?"</string>
+    <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"Параметрлерді қайтару"</string>
+    <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"Дисплей өлшемі және мәтін параметрлері бастапқы күйге қайтарылсын ба?"</string>
+    <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"Дисплей өлшемі және мәтін параметрлері телефонның бастапқы параметрлеріне қайтарылады."</string>
+    <string name="accessibility_text_reading_confirm_dialog_reset_button" msgid="8215800137850243736">"Бастапқы күйге қайтару"</string>
+    <string name="accessibility_text_reading_conversation_message_1" msgid="7883952203831957831">"Демалыс күндеріне жоспар бар ма?"</string>
+    <string name="accessibility_text_reading_conversation_message_2" msgid="8112160435318635856">"Біз суға түсуге барамыз. Барасың ба?"</string>
     <string name="accessibility_screen_option" msgid="8465307075278878145">"Oпциялар"</string>
     <string name="accessibility_preference_magnification_summary" msgid="2875518904115896888">"Экранда ұлғайту"</string>
     <string name="accessibility_screen_magnification_short_summary" msgid="2207048420669939150">"Масштабтау үшін 3 рет түртіңіз"</string>
@@ -2411,8 +2396,7 @@
     <string name="accessibility_button_intro" msgid="2601976470525277903">"Арнайы мүмкіндіктер түймесі қолданылуда. Бұл қимыл 3 түймемен басқарылмайды."</string>
     <string name="accessibility_button_summary" msgid="8510939012631455831">"Арнайы мүмкіндіктерге жылдам қол жеткізу"</string>
     <string name="accessibility_button_gesture_description" msgid="7507097717493960397"><b>"Бастау үшін:"</b>\n"1. Арнайы мүмкіндіктердің параметрлеріне өтіңіз.\n2. Функцияны таңдап, таңбашаны түртіңіз.\n3. Функцияны пайдалану үшін түймені не қимылды қолдану мүмкіндігін таңдаңыз."</string>
-    <!-- no translation found for accessibility_button_description (1261273371298608222) -->
-    <skip />
+    <string name="accessibility_button_description" msgid="1261273371298608222"><b>"Бастау үшін:"</b>\n"1. Арнайы мүмкіндіктердің параметрлеріне өтіңіз.\n2. Функцияны таңдап, таңбашаны түртіңіз.\n3. Функцияны пайдалану үшін түймені таңдаңыз."</string>
     <string name="accessibility_button_or_gesture_title" msgid="3510075963401163529">"Түйме не қимылды қолдану"</string>
     <string name="accessibility_button_location_title" msgid="7182107846092304942">"Орны"</string>
     <string name="accessibility_button_size_title" msgid="5785110470538960881">"Көлемі"</string>
@@ -3396,14 +3380,14 @@
     <string name="user_settings_footer_text" product="default" msgid="4420915712050349125">"Басқа пайдаланушыларды қосу арқылы телефонды бөлісіп пайдалануға болады. Әр пайдаланушының өз негізгі экраны, аккаунттары, қолданбалары, параметрлері, т.б. үшін жеке профилі болады."</string>
     <string name="user_list_title" msgid="1387379079186123404">"Пайдаланушылар мен профайлдар"</string>
     <string name="user_add_user_or_profile_menu" msgid="305851380425838287">"Пайдаланушы немесе профиль қосу"</string>
-    <string name="user_add_user_menu" msgid="6395904234221724625">"Пайдаланушы қосу"</string>
     <string name="user_summary_restricted_profile" msgid="451650609582185813">"Шектеулі профайл"</string>
     <string name="user_summary_not_set_up" msgid="4602868481732886115">"Құрылмаған"</string>
     <string name="user_summary_restricted_not_set_up" msgid="1658946988920104613">"Жасақталмаған - Шектеулі профайл"</string>
     <string name="user_summary_managed_profile_not_set_up" msgid="5739207307082458746">"Орнатылмаған – жұмыс профилі"</string>
     <string name="user_admin" msgid="4024553191395768119">"Әкімші"</string>
     <string name="user_you" msgid="3070562015202859996">"Сіз (<xliff:g id="NAME">%s</xliff:g>)"</string>
-    <string name="user_add_max_count" msgid="5739771048517070983">"<xliff:g id="USER_COUNT">%1$d</xliff:g> пайдаланушыға дейін қоса аласыз"</string>
+    <!-- no translation found for user_add_max_count (3328539978480663740) -->
+    <skip />
     <string name="user_cannot_manage_message" product="tablet" msgid="3405022988077682357">"Планшет иесі ғана пайдаланушыларды басқара алады."</string>
     <string name="user_cannot_manage_message" product="default" msgid="6434662649769855494">"Телефон иесі ғана пайдаланушыларды басқара алады."</string>
     <string name="user_cannot_add_accounts_message" msgid="2351326078338805337">"Шектелген профайлдардың аккаунт қосу мүмкіндігі жоқ"</string>
@@ -3423,9 +3407,6 @@
     <string name="user_adding_new_user" msgid="7439602720177181412">"Жаңа пайдаланушы қосылуда…"</string>
     <string name="user_delete_user_description" msgid="7764153465503821011">"Пайдаланушыны жою"</string>
     <string name="user_delete_button" msgid="3833498650182594653">"Жою"</string>
-    <string name="user_guest" msgid="4545590092001460388">"Қонақ"</string>
-    <string name="user_exit_guest_title" msgid="2653103120908427236">"Қонақты жою"</string>
-    <string name="user_exit_guest_confirm_title" msgid="1284823459630164754">"Қонақты жою керек пе?"</string>
     <string name="user_exit_guest_confirm_message" msgid="8995296853928816554">"Осы сеанстағы барлық қолданбалар мен деректер жойылады."</string>
     <string name="user_exit_guest_dialog_remove" msgid="7067727314172605181">"Алып тастау"</string>
     <string name="user_enable_calling" msgid="264875360626905535">"Телефон қоңырауларын қосу"</string>
@@ -3644,8 +3625,7 @@
     <string name="keywords_sounds_and_notifications_interruptions" msgid="1500312884808362467">"мазаламау үзу, үзу, үзіліс"</string>
     <string name="keywords_app" msgid="7983814237980258061">"ЖЖҚ"</string>
     <string name="keywords_location" msgid="8016374808099706213">"маңай, орын, тарих, есеп жіберу, GPS"</string>
-    <!-- no translation found for keywords_accounts (3013897982630845506) -->
-    <skip />
+    <string name="keywords_accounts" msgid="3013897982630845506">"аккаунт, аккаунт енгізу, жұмыс профилі, аккаунтты енгізу, өшіру, жою"</string>
     <string name="keywords_users" msgid="3497517660077620843">"шектеу, шектелген"</string>
     <string name="keywords_keyboard_and_ime" msgid="4741098648730042570">"мәтінді түзету, түзету, дыбыс, дірілдету, авто, тіл, қимыл, ұсыну, ұсыныс, тақырып, тіл тигізетін, сөз, түрі, эмоджи, халықаралық"</string>
     <string name="keywords_reset_apps" msgid="8254315757754930862">"ысыру, параметрлер, әдепкі"</string>
@@ -4204,8 +4184,7 @@
     <string name="zen_mode_from_no_conversations" msgid="3924593219855567165">"Жоқ"</string>
     <string name="zen_mode_conversations_count" msgid="3199310723073707153">"{count,plural, =0{Жоқ}=1{1 әңгіме}other{# әңгіме}}"</string>
     <string name="zen_mode_people_calls_messages_section_title" msgid="6815202112413762206">"Тоқтата алатындар"</string>
-    <!-- no translation found for zen_mode_people_footer (7710707353004137431) -->
-    <skip />
+    <string name="zen_mode_people_footer" msgid="7710707353004137431">"Хабар алмасу немесе қоңырау шалу қолданбалары сізге хабарлай алмаса да, таңдаған адамдарыңыз сізге осы қолданбалар арқылы хабарласа алады."</string>
     <string name="zen_mode_calls_title" msgid="2078578043677037740">"Қоңыраулар"</string>
     <string name="zen_mode_calls" msgid="7653245854493631095">"Қоңыраулар"</string>
     <string name="zen_mode_calls_list" msgid="5044730950895749093">"қоңыраулар"</string>
@@ -4434,7 +4413,12 @@
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> пайдаланылмайтын қолданба</item>
       <item quantity="one"><xliff:g id="COUNT_0">%d</xliff:g> пайдаланылмайтын қолданба</item>
     </plurals>
-    <string name="unused_apps_switch" msgid="419282628373205038">"Рұқсаттарды өшіру және орын босату"</string>
+    <!-- no translation found for unused_apps_category (8954930958175500851) -->
+    <skip />
+    <!-- no translation found for unused_apps_switch (2979882622987847195) -->
+    <skip />
+    <!-- no translation found for unused_apps_switch_summary (6971069728614582344) -->
+    <skip />
     <string name="filter_all_apps" msgid="6645539744080251371">"Барлық қолданба"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"Орнатылған қолданбалар"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"Лезде қосылатын қолданбалар"</string>
@@ -5590,6 +5574,10 @@
     <string name="accessor_never_expires_text" msgid="4647624492147788340">"Рұқсат мерзімі шектелмеген."</string>
     <string name="overlay_settings_title" msgid="1032863083496396365">"Параметрлер экранының үстін жабуға рұқсат ету"</string>
     <string name="overlay_settings_summary" msgid="2745336273786148166">"Басқа қолданбалардың үстінен шыға алатын қолданбаларға параметрлер экранының бетіне шығуға рұқсат ету"</string>
+    <!-- no translation found for allow_mock_modem (3832264806530479214) -->
+    <skip />
+    <!-- no translation found for allow_mock_modem_summary (9097416612748005374) -->
+    <skip />
     <string name="media_controls_title" msgid="403271085636252597">"Мультимедиа"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Медиа ойнатқышты бекіту"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Ойнатуды оңай жалғастыру үшін медиа ойнатқыш \"Жылдам параметрлер\" мәзірінде ашық тұрады."</string>
@@ -5675,7 +5663,8 @@
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"Қолданбаны бекіту функциясын пайдалану"</string>
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Әзірлеуші опцияларын пайдалану"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"Баспа қызметін пайдалану"</string>
-    <string name="multiple_users_main_switch_title" msgid="564013811417665756">"Бірнеше пайдаланушыны қосу"</string>
+    <!-- no translation found for multiple_users_main_switch_title (6686858308083037810) -->
+    <skip />
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Сымсыз түзетуді пайдалану"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"Графикалық драйвер параметрлерін пайдалану"</string>
     <string name="battery_saver_main_switch_title" msgid="5072135547489779352">"Батареяны үнемдеу режимін пайдалану"</string>
@@ -5739,10 +5728,8 @@
     <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"Бастапқы тұтыну лимиті"</string>
     <string name="tare_hard_consumption_limit" msgid="7977885116447608016">"Максималды тұтыну лимиті"</string>
     <string name="tare_modifiers" msgid="8919975635360280820">"Өзгерткіштер"</string>
-    <!-- no translation found for tare_actions_ctp (5110104015354916401) -->
-    <skip />
-    <!-- no translation found for tare_actions_base_price (3300967942666376589) -->
-    <skip />
+    <string name="tare_actions_ctp" msgid="5110104015354916401">"Әрекеттер (өндіріс бағасы)"</string>
+    <string name="tare_actions_base_price" msgid="3300967942666376589">"Әрекеттер (негізгі баға)"</string>
     <!-- no translation found for tare_rewards_instantaneous (8358683519945340874) -->
     <skip />
     <!-- no translation found for tare_rewards_ongoing (8641416948811152109) -->
@@ -5779,16 +5766,20 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Алдын ала қарау"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Скринсейверді таңдау"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Қосымша ақпаратты көрсету"</string>
-    <string name="dream_complications_toggle_summary" msgid="8288590233196337078">"Скринсейверде уақытты, күнді және ауа райын көрсету"</string>
+    <!-- no translation found for dream_complications_toggle_summary (4742579722349951711) -->
+    <skip />
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Қосымша параметрлер"</string>
-    <string name="dream_setup_title" msgid="6356243920317789584">"Скринсейверді реттеу"</string>
-    <string name="dream_setup_description" msgid="8881397422185278075">"Құрылғыңыз пайдаланылмаған кезде, экраныңызда ненің көрсетілетінін таңдаңыз."</string>
+    <!-- no translation found for dream_setup_title (2458303874255396142) -->
+    <skip />
+    <!-- no translation found for dream_setup_description (7508547154038580296) -->
+    <skip />
     <string name="customize_button_title" msgid="1110284655990203359">"Реттеу"</string>
     <string name="reboot_dialog_enable_freeform_support" msgid="6412591361284929149">"Еркін түрде қолдау параметрін белсендіру үшін құрылғыны өшіріп қосу қажет."</string>
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"Қосымша дисплейлерде жұмыс үстелі режимін мәжбүрлеп белсендіру үшін құрылғыны өшіріп қосу қажет."</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"Қазір өшіріп қосу"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Кейінірек өшіріп қосу"</string>
-    <string name="bluetooth_details_spatial_audio_title" msgid="6183752635162309599">"Көлемді дыбыс"</string>
+    <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
+    <skip />
     <!-- no translation found for bluetooth_details_spatial_audio_summary (5026859623681482668) -->
     <skip />
     <!-- no translation found for bluetooth_details_head_tracking_title (5416972521040337799) -->
