--- a/res/values-mn/strings.xml
+++ b/res/values-mn/strings.xml
@@ -728,10 +728,6 @@
     <string name="lock_last_pattern_attempt_before_wipe_profile" msgid="2479195488386373253">"Та дараагийн оролдлогоор буруу хээ оруулбал таны ажлын профайлыг үүний өгөгдлийн хамтаар устгах болно"</string>
     <string name="lock_last_pin_attempt_before_wipe_profile" msgid="7086428013814722436">"Та дараагийн оролдлогоор буруу ПИН оруулбал таны ажлын профайлыг үүний өгөгдлийн хамтаар устгах болно"</string>
     <string name="lock_last_password_attempt_before_wipe_profile" msgid="253673907244112643">"Та дараагийн оролдлогоор буруу нууц үг оруулбал таны ажлын профайлыг үүний өгөгдлийн хамтаар устгах болно"</string>
-    <string name="lock_failed_attempts_now_wiping_device" msgid="2813744895409014471">"Түгжээг хэт олон удаа буруу оруулсан тул энэ төхөөрөмжийн өгөгдлийг устгах болно."</string>
-    <string name="lock_failed_attempts_now_wiping_user" msgid="3958755474620948727">"Түгжээг хэт олон удаа буруу оруулсан тул энэ хэрэглэгчийг устгах болно."</string>
-    <string name="lock_failed_attempts_now_wiping_profile" msgid="3171880997211568208">"Түгжээг хэт олон удаа буруу оруулсан тул энэ ажлын профайлыг үүний өгөгдлийн хамтаар устгах болно."</string>
-    <string name="lock_failed_attempts_now_wiping_dialog_dismiss" msgid="170155081899679669">"Хаах"</string>
     <plurals name="lockpassword_password_too_short" formatted="false" msgid="2192234965414232157">
       <item quantity="other">Хамгийн багадаа <xliff:g id="COUNT_1">%d</xliff:g> тэмдэгт байх ёстой</item>
       <item quantity="one">Хамгийн багадаа <xliff:g id="COUNT_0">%d</xliff:g> тэмдэгт агуулах ёстой</item>
@@ -2328,8 +2324,7 @@
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"Текстийг хэрхэн үзүүлэхийг өөрчлөх"</string>
     <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"Гарчиг: Халуун агаарын бөмбөлгийн дизайн"</string>
     <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"Дараахаас: Билл"</string>
-    <!-- no translation found for accessibility_text_reading_preview_mail_content (8078152365771951802) -->
-    <skip />
+    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"Өглөөний мэнд!\n\nБи зүгээр л загвар ямар болж байгааг мэдэхийг хүссэн юм. Бид шинэ бөмбөлөг барьж эхлэхээс өмнө тэд бэлэн болох уу?"</string>
     <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"Тохиргоог шинэчлэх"</string>
     <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"Дэлгэцийн хэмжээ болон текстийг шинэчлэх үү?"</string>
     <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"Таны дэлгэцийн хэмжээ болон текстийн сонголтыг утасны эх тохиргоо руу шинэчилнэ"</string>
@@ -3371,14 +3366,14 @@
     <string name="user_settings_footer_text" product="default" msgid="4420915712050349125">"Шинэ хэрэглэгч нэмж утсаа хуваалцана уу. Хэрэглэгч тус бүр таны утсан дээр Нүүр хуудасны дэлгэц, бүртгэл, апп, тохиргоо болон бусад зүйлийг тохируулах хувийн орон зайтай байна."</string>
     <string name="user_list_title" msgid="1387379079186123404">"Хэрэглэгчид &amp; профайлууд"</string>
     <string name="user_add_user_or_profile_menu" msgid="305851380425838287">"Хэрэглэгч буюу профайл нэмэх"</string>
-    <string name="user_add_user_menu" msgid="6395904234221724625">"Хэрэглэгч нэмэх"</string>
     <string name="user_summary_restricted_profile" msgid="451650609582185813">"Хязгаарлагдсан профайл"</string>
     <string name="user_summary_not_set_up" msgid="4602868481732886115">"Тохируулаагүй"</string>
     <string name="user_summary_restricted_not_set_up" msgid="1658946988920104613">"Тохируулаагүй - Хязгаарлагдсан профайл"</string>
     <string name="user_summary_managed_profile_not_set_up" msgid="5739207307082458746">"Тохируулаагүй - Ажлын профайл"</string>
     <string name="user_admin" msgid="4024553191395768119">"Админ"</string>
     <string name="user_you" msgid="3070562015202859996">"Та (<xliff:g id="NAME">%s</xliff:g>)"</string>
-    <string name="user_add_max_count" msgid="5739771048517070983">"Та <xliff:g id="USER_COUNT">%1$d</xliff:g> хүртэлх хэрэглэгч нэмж болно"</string>
+    <!-- no translation found for user_add_max_count (3328539978480663740) -->
+    <skip />
     <string name="user_cannot_manage_message" product="tablet" msgid="3405022988077682357">"Зөвхөн таблетын эзэмшигч л хэрэглэгчдийг удирдаж болно."</string>
     <string name="user_cannot_manage_message" product="default" msgid="6434662649769855494">"Зөвхөн утасны эзэмшигч л хэрэглэгчдийг удирдаж болно."</string>
     <string name="user_cannot_add_accounts_message" msgid="2351326078338805337">"Хязгаарлагдсан профайлууд бүртгэл нэмэх боломжгүй"</string>
@@ -3398,9 +3393,6 @@
     <string name="user_adding_new_user" msgid="7439602720177181412">"Шинэ хэрэглэгч нэмж байна…"</string>
     <string name="user_delete_user_description" msgid="7764153465503821011">"Хэрэглэгчийг устгах"</string>
     <string name="user_delete_button" msgid="3833498650182594653">"Устгах"</string>
-    <string name="user_guest" msgid="4545590092001460388">"Зочин"</string>
-    <string name="user_exit_guest_title" msgid="2653103120908427236">"Зочныг хасах"</string>
-    <string name="user_exit_guest_confirm_title" msgid="1284823459630164754">"Зочныг хасах уу?"</string>
     <string name="user_exit_guest_confirm_message" msgid="8995296853928816554">"Энэ харилцан үйлдлийн бүх апп болон дата устах болно."</string>
     <string name="user_exit_guest_dialog_remove" msgid="7067727314172605181">"Хасах"</string>
     <string name="user_enable_calling" msgid="264875360626905535">"Утасны дуудлагыг идэвхжүүлэх"</string>
@@ -4407,7 +4399,12 @@
       <item quantity="other">Ашиглаагүй <xliff:g id="COUNT_1">%d</xliff:g> апп</item>
       <item quantity="one">Ашиглаагүй <xliff:g id="COUNT_0">%d</xliff:g> апп</item>
     </plurals>
-    <string name="unused_apps_switch" msgid="419282628373205038">"Зөвшөөрлийг хасаж, сул зай гаргах"</string>
+    <!-- no translation found for unused_apps_category (8954930958175500851) -->
+    <skip />
+    <!-- no translation found for unused_apps_switch (2979882622987847195) -->
+    <skip />
+    <!-- no translation found for unused_apps_switch_summary (6971069728614582344) -->
+    <skip />
     <string name="filter_all_apps" msgid="6645539744080251371">"Бүх апп"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"Суулгасан апп"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"Шуурхай апп"</string>
@@ -5563,6 +5560,10 @@
     <string name="accessor_never_expires_text" msgid="4647624492147788340">"Түрээсийн хугацаа хэзээ ч дуусахгүй."</string>
     <string name="overlay_settings_title" msgid="1032863083496396365">"Тохиргооны дэлгэцэд давхарлахыг зөвшөөрөх"</string>
     <string name="overlay_settings_summary" msgid="2745336273786148166">"Бусад аппын дээр үзүүлэх боломжтой аппуудыг Тохиргооны дэлгэцийг давхарлахыг зөвшөөрөх"</string>
+    <!-- no translation found for allow_mock_modem (3832264806530479214) -->
+    <skip />
+    <!-- no translation found for allow_mock_modem_summary (9097416612748005374) -->
+    <skip />
     <string name="media_controls_title" msgid="403271085636252597">"Медиа"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Медиа тоглуулагчийг бэхлэх"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Дахин тоглуулахыг шуурхай үргэлжлүүлэхийн тулд медиа тоглуулагч Шуурхай тохиргоонд нээлттэй хэвээр байдаг"</string>
@@ -5648,7 +5649,8 @@
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"Апп бэхлэхийг ашиглах"</string>
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Хөгжүүлэгчийн тохиргоог ашиглах"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"Хэвлэлийн үйлчилгээ ашиглах"</string>
-    <string name="multiple_users_main_switch_title" msgid="564013811417665756">"Олон хэрэглэгчийг идэвхжүүлэх"</string>
+    <!-- no translation found for multiple_users_main_switch_title (6686858308083037810) -->
+    <skip />
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Wireless debugging-г ашиглах"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"Графикийн драйверын сонголтыг ашиглах"</string>
     <string name="battery_saver_main_switch_title" msgid="5072135547489779352">"Батарей хэмнэгчийг ашиглах"</string>
@@ -5750,22 +5752,23 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Урьдчилан үзэх"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Дэлгэц амраагчийг сонгох"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Нэмэлт мэдээллийг харуул"</string>
-    <string name="dream_complications_toggle_summary" msgid="8288590233196337078">"Дэлгэц амраагч дээр цаг, огноо, цаг агаарыг харуул"</string>
+    <!-- no translation found for dream_complications_toggle_summary (4742579722349951711) -->
+    <skip />
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Бусад тохиргоо"</string>
-    <string name="dream_setup_title" msgid="6356243920317789584">"Дэлгэц амраагчаа өөрчилнө үү"</string>
-    <string name="dream_setup_description" msgid="8881397422185278075">"Төхөөрөмжөө ашиглаагүй үед дэлгэцэн дээрээ юу харагдахаа сонгоно уу."</string>
+    <!-- no translation found for dream_setup_title (2458303874255396142) -->
+    <skip />
+    <!-- no translation found for dream_setup_description (7508547154038580296) -->
+    <skip />
     <string name="customize_button_title" msgid="1110284655990203359">"Өөрчлөх"</string>
     <string name="reboot_dialog_enable_freeform_support" msgid="6412591361284929149">"Чөлөөт хэлбэрийн дэмжлэгийг идэвхжүүлэхийн тулд дахин асаах шаардлагатай."</string>
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"Хоёрдогч дэлгэц дээр дэлгэцийн горимыг хүчлэхийн тулд дахин асаах шаардлагатай."</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"Одоо дахин асаах"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Дараа дахин асаах"</string>
-    <string name="bluetooth_details_spatial_audio_title" msgid="6183752635162309599">"Орон зайн аудио"</string>
-    <!-- no translation found for bluetooth_details_spatial_audio_summary (5026859623681482668) -->
+    <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
     <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_title (5416972521040337799) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_summary (3942238746595985395) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"Тохиромжтой медианы аудио илүү гайхалтай болно"</string>
+    <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Толгой хянах"</string>
+    <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"Таныг толгойгоо хөдөлгөх үед илүү бодит мэт сонсогдохын тулд аудио өөрчлөгдөнө"</string>
     <string name="ingress_rate_limit_title" msgid="2106694002836274350">"Сүлжээг татаж авах үнэлгээний хязгаар"</string>
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"Интернэт холболтоор хангадаг бүх сүлжээнд хэрэглэх сүлжээний зурвасын өргөн нэвтрэх хурдны хязгаарыг тохируулна уу."</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"Тохируулах сүлжээг татаж авах үнэлгээний хязгаар"</string>
